--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,13 @@
         android:theme="@style/Theme.Kiwinform"
         tools:targetApi="31">
         <activity
+            android:name=".ui.view.reminder.ReminderActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".ui.view.register.RegisterActivity"
             android:exported="false"
             android:screenOrientation="sensorPortrait"
