--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,4 +65,7 @@ dependencies {
     implementation "androidx.datastore:datastore-preferences:1.0.0"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.1"
+
+    // ViewPager2 for TabLayout
+    implementation "androidx.viewpager2:viewpager2:1.0.0"
 }
