Implementasi Room Database dan fungsi save plan di reminderactivity

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
     id 'kotlin-parcelize'
 }
 
@@ -68,4 +69,9 @@ dependencies {
 
     // ViewPager2 for TabLayout
     implementation "androidx.viewpager2:viewpager2:1.0.0"
+
+    //Room
+    implementation 'androidx.room:room-runtime:2.4.3'
+    implementation 'androidx.room:room-ktx:2.4.3'
+    kapt 'androidx.room:room-compiler:2.4.3'
 }
