--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,19 @@
         android:theme="@style/Theme.Kiwinform"
         tools:targetApi="31">
         <activity
+            android:name=".ui.view.onboarding.OnBoardingActivity"
+            android:exported="true">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".ui.view.reminder.ReminderActivity"
             android:exported="false">
             <meta-data
@@ -37,22 +50,15 @@
             tools:ignore="LockedOrientationActivity" />
         <activity
             android:name=".ui.view.dashboard.MainActivity"
-            android:exported="true"
+            android:exported="false"
             android:screenOrientation="sensorPortrait"
             tools:ignore="LockedOrientationActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".ui.view.splash.SplashActivity"
             android:exported="true"
             android:screenOrientation="sensorPortrait"
-            tools:ignore="LockedOrientationActivity">
-
-        </activity>
+            tools:ignore="LockedOrientationActivity"></activity>
     </application>
 
 </manifest>
