--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Nov 21 20:05:13 ICT 2022
-sdk.dir=C\:\\Users\\adita\\AppData\\Local\\Android\\Sdk
+#Thu Dec 08 19:37:32 ICT 2022
+sdk.dir=E\:\\Applications\\Android\\Sdk
