--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,12 +7,19 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@drawable/ic_app_icon"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/ic_app_icon"
+        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Kiwinform"
         tools:targetApi="31">
+        <activity
+            android:name=".ui.view.onboarding.OnBoardingActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
         <activity
             android:name=".ui.view.reminder.ReminderActivity"
             android:exported="false">
@@ -32,6 +39,11 @@
             tools:ignore="LockedOrientationActivity" />
         <activity
             android:name=".ui.view.login.LoginActivity"
+            android:exported="false"
+            android:screenOrientation="sensorPortrait"
+            tools:ignore="LockedOrientationActivity" />
+        <activity
+            android:name=".ui.view.dashboard.MainActivity"
             android:exported="false"
             android:screenOrientation="sensorPortrait"
             tools:ignore="LockedOrientationActivity" />
